@@ -4,11 +4,12 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    namespace 'com.common.base'
+    compileSdk 34
 
     defaultConfig {
         minSdk 24
-        targetSdk 30
+        targetSdk 31
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -29,6 +30,14 @@ android {
     }
 }
 
+// Workaround for https://github.com/bumptech/glide/issues/5003.
+tasks.withType(JavaCompile).configureEach {
+    options.fork = true
+    options.forkOptions.jvmArgs += [
+            "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+    ]
+}
+
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -40,9 +49,9 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.6.0'
 
     //glide
-    implementation 'com.github.bumptech.glide:glide:4.13.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.1'
-    implementation 'com.github.bumptech.glide:okhttp3-integration:4.13.1'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
+    implementation 'com.github.bumptech.glide:okhttp3-integration:4.16.0'
 
     implementation project(":utils")
 }
